# shooting-game

./: .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  config.json  readme.md  setup.sh
assets/config/: Terrain (16x16).json  Terrain.json  Yellow.json  background.json
include/: camera.h  components.h  config.h  entity.h  error.h  game.h  game_state.h  goal.h  graphic.h  guide.h  player.h  systems.h  tilemap.h  utils.h
include/components/: animation.h  graphic.h  physics.h  position.h  primitive.h  texture.h
include/ecs/: archetype.h  column.h  component.h  counter.h  entity.h  primitive.h  query.h  system.h  table.h  world.h
include/ecs/archetype/: archetype.h  archetype_components.h  archetype_edges.h  archetypes.h  components.h  edges.h  finder.h
include/ecs/column/: column.h  iterator.h
include/ecs/observer/: event.h  observer.h
include/ecs/query/: base.h  iterator.h  query.h
include/ecs/systems/: core.h
include/ecs/table/: iterator.h  table.h
include/enemy/: rhino.h
include/objects/: background.h
include/player/: bullet.h  player.h  shooter.h
include/services/: texture.h
include/tiles/: parser.h  tilemap.h
src/: CMakeLists.txt  camera.cpp  entity.cpp  error.cpp  game.cpp  game_state.cpp  goal.cpp  graphic.cpp  guide.cpp  main.cpp  player.cpp  systems.cpp  utils.cpp
src/components/: animation.cpp  graphic.cpp  physics.cpp  position.cpp  texture.cpp
src/ecs/: archetype.cpp  column.cpp  component.cpp  primitive.cpp  query.cpp  table.cpp  world.cpp
src/ecs/archetype/: archetype.cpp  archetype_components.cpp  archetype_edges.cpp  archetypes.cpp  components.cpp
src/ecs/column/: column.cpp
src/ecs/query/: query.cpp
src/ecs/table/: table.cpp
src/enemy/: rhino.cpp
src/objects/: background.cpp
src/player/: bullet.cpp  player.cpp  shooter.cpp
src/services/: texture.cpp
src/tiles/: tilemap.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/ecs/: CMakeLists.txt  test_archetype.cpp  test_column.cpp  test_component.cpp  test_counter.cpp  test_primitive.cpp  test_query.cpp  test_table.cpp  test_world.cpp
tests/ecs/archetype/: test_archetype.cpp  test_archetype_components.cpp  test_archetype_edges.cpp  test_archetypes.cpp  test_components.cpp  test_edges.cpp  test_finder.cpp
tests/ecs/column/: test_column.cpp  test_iterator.cpp
tests/ecs/observer/: test_observer.cpp
tests/ecs/query/: test_iterator.cpp  test_query.cpp
tests/ecs/table/: test_iterator.cpp  test_table.cpp
tests/game/: CMakeLists.txt  main.cpp  utils.h
tests/game/components/: test_texture.cpp
